# dartt

./: pyproject.toml  requirements.txt
docs/: authors.rst  changelog.rst  conf.py  index.rst  intro.rst  license.rst  make.bat
src/dartt/: __about__.py  __init__.py  audiocd.py  bluray.py  config.py  device.py  disc.py  dvd.py  main.py  musicbrainz.py  optical.py  ripper.py  utils.py
tests/: __init__.py  conftest.py  test_audiocd.py  test_config.py  test_device.py  test_main.py  test_musicbrainz.py  test_optical.py  test_ripper.py  test_utils.py
