# SPDX-FileCopyrightText: 2023-present David A. Greene <dag@obbligato.org>

# SPDX-License-Identifier: AGPL-3.0-or-later

# Copyright 2023 David A. Greene

# This file is part of dartt

# dartt is free software: you can redistribute it and/or modify it under the
# terms of the GNU Affero General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any
# later version.

# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.

# You should have received a copy of the GNU Affero General Public License along
# with dartt. If not, see <https://www.gnu.org/licenses/>.

[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme", "hatch-requirements-txt",
            "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[project]
name = "dartt"
dynamic = ["dependencies", "readme", "version"]
description = 'Disc Archive, Rip, Transcode and Tag'
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "David A. Greene", email = "dag@obbligato.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://github.com/greened/dartt#readme"
Issues = "https://github.com/unknown/greened/issues"
Source = "https://github.com/greened/dartt"

[project.scripts]
dartt = "dartt.main:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/dartt tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["dartt"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["dartt", "tests"]
branch = true
parallel = true
omit = [
  "src/dartt/__about__.py",
]

[tool.coverage.paths]
dartt = ["src/dartt", "*/dartt/src/dartt"]
tests = ["tests", "*/dartt/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.metadata.hooks.vcs]
Homepage = "https://github.com/greened/dartt#readme"
source_archive = "https://github.com/greened/dartt/archive/{commit_hash}.zip"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "src/dartt/__init__.py"
start-after = "\"\"\""
end-before = "-------"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = """

-------

.. contents:: Table of Contents

"""

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "docs/authors.rst"
end-before = "A full list of contributors"

#[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
#path = "docs/changelog.rst"
#pattern = '(\d+\.\d+\.\d+.+?\n)\d+'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = """
---

`→ Full Changelog`_:docs/changelog.rst


"""

# Replace relative links with absolute.
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(.+?)_:((?!https?://)\S+?)'
replacement = '\1_:https://github.com/greened/dartt/tree/main/\g<2>'

# Replace GitHub issue references with links.
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = ":issue:`(\\d+)`"
replacement = "#\\1_: https://github.com/greened/dartt/issues/\\1"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/dartt"]
